<resources>
    <string name="verifikasi_identitas">Verifikasi Identitas</string>
    <string name="verifikasi_wajah">Verifikasi Wajah</string>
    <string name="izinkan">Izinkan</string>
    <string name="footer_caption">Datamu akan dirahasiakan dan hanya digunakan untuk keperluan verifikasi</string>
    <string name="proses_ini_diawasi_oleh">Proses ini diawasi oleh</string>
    <string name="foto_kartu_identitas">Foto Kartu Identitas</string>
    <string name="cam_ktp_caption">Posisikan kartu identitas kamu pada bingkai.\nPastikan foto kartu identitas kamu terlihat jelas dan bisa dibaca dengan baik</string>
    <string name="foto_selfie">Foto Selfie</string>
    <string name="cam_selfie_caption">Posisikan kartu identitas kamu pada bingkai.\nPastikan foto kartu identitas kamu terlihat jelas dan bisa dibaca dengan baik</string>
    <string name="guide_liveness_caption">Verifikasi dilakukan dengan memfoto wajahmu sebanyak 15 kali berturut-turut. Tekan tombol di bawah untuk mulai verifikasi</string>
    <string name="mulai">Mulai</string>
    <string name="langkah_3_dari_3">Langkah 3 dari 3</string>
    <string name="silahkan_verifikasi_data_kamu">Silahkan verifikasi data kamu</string>
    <string name="nomor_identitas_ktp">Nomor Identitas (e-KTP)</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota_kabupaten">Kota / Kabupaten</string>
    <string name="alamat">Alamat</string>
    <string name="foto_ktp">Foto e-KTP</string>
    <string name="lihat">Lihat</string>
    <string name="ulangi">Ulangi</string>
    <string name="mulai_ambil_foto">Mulai Ambil Foto</string>
    <string name="langkah_1_dari_3">Langkah 1 dari 3</string>
    <string name="siapkan_kartu_e_ktp_fisik">Siapkan kartu e-KTP fisik</string>
    <string name="pastikan_e_ktp_masih_aktif">Pastikan e-KTP masih aktif</string>
    <string name="pastikan_e_ktp_dapat_terbaca_dengan_jelas">Pastikan e-KTP dapat terbaca dengan jelas</string>
    <string name="pastikan_kamu_berada_di_tempat_yang_terang">Pastikan kamu berada di tempat yang terang</string>
    <string name="pastikan_foto_e_ktp_tidak_tertutupi_oleh_apapun">Pastikan foto e-KTP tidak tertutupi oleh apapun</string>
    <string name="langkah_2_dari_3">Langkah 2 dari 3</string>
    <string name="ambil_foto_selfie_kamu">Ambil foto selfie kamu</string>
    <string name="posisikan_kartu_identitas_kamu_pada_bingkai_dan_pastikan_foto_terlihat_jelas_sehingga_dapat_terbaca_dengan_baik">Posisikan kartu identitas kamu pada bingkai dan pastikan foto terlihat jelas sehingga dapat terbaca dengan baik</string>
    <string name="simpan">Simpan</string>
    <string name="access_location_title">Izinkan kami untuk mengakses lokasimu</string>
    <string name="access_location_caption">Kami memohon izin mengakses lokasimu untuk mengamankan akun kamu.\nKami akan mengumpulkan data lokasi saat kamu melakukan transaksi seperti transfer dan pembelian untuk mencegah penipuan, bahkan ketika aplikasi sedang tidak digunakan</string>
    <string name="access_camera_title">Izinkan kami untuk mengakses kamera HP kamu</string>
    <string name="access_camera_caption">Dengan kamu memberikan izin, kamu dapat mengambil foto kartu identitas dan foto selfie guna menyelesaikan proses verifikasi.\nData kamu akan dirahasiakan dan hanya digunakan untuk keperluan verifikasi</string>
    <string name="lanjut">Lanjut</string>
    <string name="face_verification">Face Verification</string>
    <string name="bersiaplah_untuk_mengikuti_instruksi_senyum_dan_kedipkan_mata">Bersiaplah untuk mengikuti instruksi!\n<b>Senyum dan kedipkan mata</b></string>
    <string name="powered_by">Powered by</string>
    <string name="doku">DOKU</string>
    <string name="liveness_caption">Pastikan wajahmu terlihat kamera</string>
    <string name="liveness_caption_start">Silakan tersenyum dan kedipkan mata</string>
    <string name="nomor_identitas">Nomor Identitas</string>
    <string name="empty_error_message">%1$s %2$s</string>
    <string name="wajib_diisi">wajib diisi</string>
    <string name="age_under_17">Maaf usia kamu belum 17th</string>
    <string name="ktp_invalid">Tidak valid. Pastikan nomor identitas benar</string>
    <string name="name_invalid">Nama lengkap valid</string>
    <string name="hint_nomor_identitas">contoh: 125361728323xxx</string>
    <string name="hint_nama_lengkap">Nama lengkap</string>
    <string name="hint_tempat_lahir">contoh: Jakarta</string>
    <string name="hint_tanggal_lahir">Pilih Tanggal</string>
    <string name="hint_pekerjaan">contoh: Karyawan</string>
    <string name="hint_alamat">Ketikkan alamat kamu disini</string>
    <string name="registrasi_biometrik">Registrasi Biometrik</string>
    <string name="autentikasi_biometrik">Autentikasi Biometrik</string>
    <string name="update_biometrik">Perbarui Biometrik</string>
    <string name="finish_success_title">Selamat!</string>
    <string name="finish_success_desc">Registrasi biometrik berhasil dilakukan</string>
    <string name="finish_failed_title">Registrasi Gagal</string>
    <string name="finish_failed_desc">Silakan coba lagi atau hubungi Customer Care\ndengan menyertakan Error Code berikut</string>
    <string name="finish_failed_error">Error Code: %1$s</string>
    <string name="close">Tutup</string>
    <string name="cancel">Batalkan</string>
    <string name="try_again">Coba Lagi</string>
    <string name="enter">Masuk</string>
    <string name="verification">Verifikasi</string>
    <string name="not_registered_title">Belum Ada Data Biometrik</string>
    <string name="not_registered_caption">Lakukan Verifikasi Biometrik dulu, yuk</string>
    <string name="face_not_detected">Wajah Tidak Terdeteksi</string>
    <string name="face_not_detected_caption">Pastikan wajahmu terlihat kamera, ya</string>
    <string name="detected_spoofing">Wajah Tidak Sesuai</string>
    <string name="detected_spoofing_caption">Wajah yang terdeteksi tidak sama dengan wajahmu saat ini</string>
    <string name="success_update_caption">Pembaruan data biometrik berhasil dilakukan</string>
    <string name="already_register_title">Sudah Ada Data Biometrik</string>
    <string name="already_register_caption">Coba masuk, yuk</string>
    <string name="unexpected_exception_title">Sistem Mengalami Gangguan</string>
    <string name="unexpected_exception_caption">Coba masuk, yuk</string>
    <string name="call_cs">Hubungi Customer Service</string>
</resources>