<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ktp.KtpFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_title"
        style="@style/Theme.DokuSDK.StepTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/langkah_2_dari_3"
        android:textColor="@color/red_60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_caption"
        style="@style/Theme.DokuSDK.StepCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ambil_foto_selfie_kamu"
        app:layout_constraintStart_toStartOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <View
        android:id="@+id/view_progress_1"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/rounded_progress_shape_active"
        app:layout_constraintEnd_toStartOf="@+id/view_progress_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_caption" />

    <View
        android:id="@+id/view_progress_2"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginHorizontal="2dp"
        android:background="@drawable/rounded_progress_shape_active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_progress_3"
        app:layout_constraintStart_toEndOf="@+id/view_progress_1"
        app:layout_constraintTop_toTopOf="@id/view_progress_1" />

    <View
        android:id="@+id/view_progress_3"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_progress_shape_inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_progress_2"
        app:layout_constraintTop_toTopOf="@id/view_progress_1" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_selfie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/dummy_selfie"
        app:layout_constraintTop_toBottomOf="@+id/view_progress_1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        style="@style/Theme.DokuSDK.StepCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/posisikan_kartu_identitas_kamu_pada_bingkai_dan_pastikan_foto_terlihat_jelas_sehingga_dapat_terbaca_dengan_baik"
        app:layout_constraintTop_toBottomOf="@id/img_selfie"
        tools:layout_editor_absoluteX="16dp" />

    <include
        android:id="@+id/footer_information"
        layout="@layout/vp_sdk_footer_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_take_photo"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_take_photo"
        style="@style/Theme.DokuSDK.FooterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mulai_ambil_foto"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>