<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.liveness.LivenessFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-32dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/gray_50"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_caption"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_arrow_back_18"
        android:tint="@color/white"
        android:translationZ="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/toolbar_title"
        style="@style/Theme.DokuSDK.ToolbarTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/verifikasi_wajah"
        android:textColor="@color/white"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/toolbar_caption"
        style="@style/Theme.DokuSDK.HeaderCamCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="@string/liveness_caption"
        android:translationZ="1dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="200dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator"
        app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator"
        app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator">

        <androidx.camera.view.PreviewView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:scaleType="fillCenter"
            tools:background="@color/black" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="64dp"
        android:background="@android:color/transparent"
        app:indicatorColor="@color/turquoise_50"
        app:indicatorSize="264dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_toolbar"
        app:trackThickness="10dp"
        tools:progress="80" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_countdown_timer"
        style="@style/Theme.DokuSDK.BottomSheetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="1dp"
        android:visibility="gone"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintStart_toStartOf="@+id/materialCardView2"
        app:layout_constraintTop_toTopOf="@+id/materialCardView2"
        tools:text="1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/powered_by"
        android:textColor="@color/black_neutral_90"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialTextView3"
        app:layout_constraintEnd_toStartOf="@+id/shapeableImageView2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialTextView3" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView2"
        android:layout_width="12dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_logo_doku"
        app:layout_constraintBottom_toBottomOf="@+id/materialTextView3"
        app:layout_constraintEnd_toStartOf="@+id/materialTextView3"
        app:layout_constraintStart_toEndOf="@+id/materialTextView2"
        app:layout_constraintTop_toTopOf="@+id/materialTextView3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        style="@style/Theme.DokuSDK.Doku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/doku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>